# pepino

./: .gitignore  2  Cargo.toml  README.md  test_generation.sh
.github/workflows/: release.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/generator/: Cargo.toml
crates/generator/src/: lib.rs
crates/generator/src/utils/: files.rs  mod.rs  templates.rs
crates/orchestra/: Cargo.toml
crates/orchestra/src/: lib.rs
crates/orchestra/src/models/: mod.rs
src/: cli.rs  error.rs  main.rs
src/generator/: files.rs  mod.rs  templates.rs
templates/: .env.example  README.md  justfile
templates/base/: Cargo.toml.template  README.md  justfile
templates/client/: package-lock.json  package.json  package.json.template
templates/client/src/: App.css  App.tsx
templates/client/src/api/: users.ts
templates/client/src/types/: api.ts
templates/database-sqlx-postgres/: .env.example  Cargo.fragment.toml  README.md  db.rs  docker-compose.yml  main.rs
templates/database-sqlx-postgres/migrations/: 20251017202040_create_users_table.sql
templates/database-sqlx-sqlite/: .env.example  Cargo.fragment.toml  README.md  db.rs  main.rs
templates/database-sqlx-sqlite/migrations/: 20251017202040_create_users_table.sql
templates/database-sqlx-sqlite/migrations/server-axum/: Cargo.fragment.toml
templates/database-sqlx-sqlite/migrations/server-axum/src/: config.rs  main.rs
templates/server/: Cargo.toml  Cargo.toml.template
templates/server-axum/: Cargo.base.toml  Cargo.fragment.toml
templates/server-axum/src/common/: errors.rs  mod.rs
templates/server-axum/src/handlers/: public.rs
templates/server/src/: config.rs  main.rs
templates/server/src/common/: errors.rs  mod.rs  utils.rs
templates/server/src/handlers/: public.rs
templates/server/src/models/: user.rs
templates/server/src/services/: user.rs
test-integration-project/: .env.example  Cargo.toml
test-integration-project/client/: package-lock.json  package.json
test-integration-project/client/src/types/: api.ts
test-integration-project/server/: Cargo.toml
test-integration-project/server/migrations/: 20251017202040_create_users_table.sql
test-integration-project/server/src/: config.rs
test-integration-project/server/src/models/: user.rs
testers/: .env.example  .gitignore
testers/client/: package.json
testers/client/src/: main.tsx
testers/server/: Cargo.toml  data.db
testers/server/src/: db.rs
tests/: integration_test.sh
