[package]
name = "pepino"
version = "0.1.0"
edition = "2024"
authors = ["Nkemjika <nkemjikanma@proton.me>"]
description = "A fullstack Rust + Vite project scaffolder"
license = "MIT"
repository = "https://github.com/nkemjikanma/pepino"
keywords = ["cli", "scaffolder", "fullstack", "rust", "vite"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "templates/**/*",
    "!templates/target/**",          
    "!templates/server/target/**",
    "!templates/client/node_modules/**",
]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
rust-embed = {version = "8.8.0", features = ["include-exclude", "debug-embed"]}
tempfile = "3.23.0"
thiserror = "2.0.17"

[[bin]]
name = "pepino"
path = "src/main.rs"
