[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
orchestra = {path = "../orchestra"}
camino = "1.2.1"
clap = { version = "4.5.48", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
rust-embed = {version = "8.8.0", features = ["include-exclude", "debug-embed"]}
tempfile = "3.23.0"
thiserror = "2.0.17"
