[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-native-tls", "tls-rustls-ring-webpki", "chrono", "uuid", "ipnetwork"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
