
[package]
name = "testers"
version = "0.1.0"
edition = "2024"

[dependencies]
# Base dependencies that work with any backend/DB
typeshare = "1.0.0"
chrono = {version = "0.4.42", features = ["serde"]}
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }


# Axum dependencies
axum = "0.8.6"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }


# SQLx with SQLite features
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

